updated component-markup.js; fixed whitespace-collapse on components; added refix as to interpret on code-blocks

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -81,11 +81,11 @@ a.unstyled-anchor:active
 }
 
 .component-render-result {
-  background: #ddd;
-  margin-top: .5rem;
+  background: rgb(18, 18, 18);
+  margin-top: 1rem;
   padding: 1rem;
-  border-radius: .5rem;
-  margin-bottom: 500px;
+  border-radius: .4rem;
+  border: var(--ifm-table-border-width) solid var(--ifm-table-border-color)
 }
 
 .rendered-component-line {
@@ -104,6 +104,7 @@ a.unstyled-anchor:active
 .rendered-component {
   font-family: var(--font, '?'), 'minecraft';
   text-shadow: var(--shadow-color) .15rem .15rem;
+  white-space: pre;
 
   &--bold {
     font-weight: bold;
